--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "server.js",
   "author": "Scotch",
   "dependencies": {
-    "express": "~4.6.1",
-    "mongoose": "~3.8.13",
-    "morgan": "~1.1.1",
-    "body-parser": "~1.4.3",
-    "method-override": "~2.1.1"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.3.1",
+    "morgan": "~1.1.1"
   }
 }
